Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2858

Attempts to delete .lustre/ should fail with EPERM

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 6921

      On master, rm -rf $FSROOT/.lustre/ succeeds though it should (and used to) return EPERM.

      According to git bisect, the regression was introduced by change I7483b0f023e4e3de6597da58d3d9f3e96c0d53b7 (http://review.whamcloud.com/#change,4339)

            di.wang Di Wang (Inactive)
            hdoreau Henri Doreau (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: