LU-2858 mdt: Prevent deletion of .lustre/

Added an explicit check to make sure that attempts to unlink
.lustre/ fail with EPERM.

Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Change-Id: Ib8d255d2531e7bb414a84b88a2e65a0d34469500